datepicker dark-mode fix inactive date contrast & alignment

--- a/ext/riverlea/core/css/components/_form.css
+++ b/ext/riverlea/core/css/components/_form.css
@@ -758,6 +758,11 @@ input.crm-form-checkbox) + label {
   opacity: 1;
   padding: var(--crm-s);
 }
+#ui-datepicker-div .ui-state-default,
+#ui-datepicker-div .ui-widget-content .ui-state-default {
+  color: var(--crm-c-text);
+  text-align: center;
+}
 #ui-datepicker-div .ui-datepicker-calendar .ui-state-disabled {
   opacity: 0.35;
 }
